# sntp_client

./: .gitignore  CMakeLists.txt  README.md
examples/sntp_clent_example/: CMakeLists.txt  main.cpp
src/sntp_client/: CMakeLists.txt  sntp_client.cpp  sntp_client.hpp  sntp_types.h  system_clock.hpp
src/sntp_client/android/: system_clock.cpp
src/sntp_client/apple/: system_clock.cpp
src/sntp_client/linux/: system_clock.cpp
src/sntp_client/windows/: system_clock.cpp
